# test

./: .gitignore  README.md  parser.go  settings.json  sub.txt  types.go  validator.go  writer.go
.github/workflows/: build-and-collect-configs.yml  proxy-config-automation.yml  update-configs.yml
config_collector/: sub.txt
data/: Sub.txt
data/enriched_urls/: enriched_urls.txt
data/enriched_urls/by_country/: ar_2025-10-07_22-14-46.txt  ar_2025-10-07_22-20-17.txt  ar_2025-10-08_01-53-42.txt  ar_2025-10-08_12-54-34.txt  ar_2025-10-08_19-53-57.txt  at_2025-10-07_22-14-46.txt  at_2025-10-07_22-20-17.txt  at_2025-10-08_01-53-42.txt  at_2025-10-08_12-54-34.txt  at_2025-10-08_19-53-57.txt  bh_2025-10-07_22-20-17.txt  bh_2025-10-08_01-53-42.txt  bh_2025-10-08_12-54-34.txt  bh_2025-10-08_19-53-57.txt  br_2025-10-07_22-20-17.txt  br_2025-10-08_01-53-42.txt  br_2025-10-08_12-54-34.txt  br_2025-10-08_19-53-57.txt  ca_2025-10-07_22-14-46.txt  ca_2025-10-07_22-20-17.txt  ca_2025-10-08_01-53-42.txt  ca_2025-10-08_12-54-34.txt  ca_2025-10-08_19-53-57.txt  ch_2025-10-07_22-14-46.txt  (+202 more)
data/working_url/: working_all_urls.txt  working_hysteria2_urls.txt  working_hysteria_urls.txt  working_shadowsocks_urls.txt  working_shadowsocksr_urls.txt  working_trojan_urls.txt  working_tuic_urls.txt  working_vless_urls.txt  working_vmess_urls.txt
main/: CMakeLists.txt
main/include/: ProxyBean.h  Utils.h
main/src/: ProxyBean.cpp  Utils.cpp  main.cpp
src/: logger.go  main.go  parser.go  sysproc.go  writer.go
test/: proxy-tester.go
xray_test/: geo-fraud-checker.go  proxy-tester.go
(+20 files in other folders)
